<resources>
    <string name="app_name">Investor playground</string>

    <string name="action_settings">Settings</string>
    <string name="save_and_continue_button_text">Go</string>
    <string name="go_back_button">Back</string>
    <string name="hint_set_company_text_view">Financial instrument</string>
    <string name="hint_set_benchmark_text_view">Benchmark (optional)</string>
    <string name="hint_set_start_date_EditText_1st_frag">Start date</string>
    <string name="hint_set_end_date_EditText_1st_frag">End date</string>
    <string name="hint_enter_c0">Enter $0</string>
    <string name="hint_enter_cf">Enter $f</string>
    <string name="hint_enter_t">Enter t</string>
    <string name="hint_enter_r">Enter r</string>
    <string name="return_rate_formula_text_view">Check the desired variable and fill out the others \n \nCompound interest: \n$f/$0 = (1+r)^t</string>
    <string name="return_rate_dialog_present_value_text_view">Present value</string>
    <string name="return_rate_dialog_future_value_text_view">Future value</string>
    <string name="return_rate_dialog_t_span_text_view">Time span (years)</string>
    <string name="return_rate_dialog_r_text_view">Annualized return rate (%)</string>
    <string name="return_rate_dialog_question_mark_text_view">" \? "</string>
    <string name="label_sharpe_ratio_text_view">Sharpe ratio:</string>
    <string name="label_beta_text_view">Beta:</string>
    <string name="label_correlation_with_index_text_view">Correlation:</string>
    <string name="label_annualized_return_text_view">Annualized buy-and-hold return: (%)</string>
    <string name="label_return_text_view">Buy-and-hold return: (%)</string>
    <string name="label_stats_title_text_view">Stats</string>

    <string name="q_RSI_buy_text_view">The Relative Strength Index (RSI)
        is an indicator that can help detect overbought (approaching 100)
        and oversold (approaching zero) situations</string>

    <string name="q_RSI_sell_text_view">The Relative Strength Index (RSI)
        is an indicator that can help detect overbought (approaching 100)
        and oversold (approaching zero) situations</string>

    <string name="q_ADX_buy_text_view">The average directional movement
        (ADX) is an indicator of trend strength</string>

    <string name="q_ADX_sell_text_view">The average directional movement
        (ADX) is an indicator of trend strength</string>

    <string name="q_SL_buy_text_view">Stop Loss is an order to buy
        that triggers once the price increases a certain amount
        above the last minimum</string>

    <string name="q_SL_sell_text_view">Stop Loss is an order to sell
        that triggers once the price decreases a certain amount
        above the last maximum</string>


</resources>
