<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/small_padding"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <ImageView
        android:contentDescription="Clickable question mark symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/return_rate_question_mark"
        android:src="@drawable/ic_help_outline_black_36dp"
        android:layout_gravity="end"
        />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:paddingTop="@dimen/small_padding">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:gravity="center|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c0_checkbox"
                />
            <TextView
                android:layout_width="@dimen/rrdt_TextViews_lwidth"
                android:layout_weight="@dimen/rrdt_text_view_weight"
                android:layout_height="wrap_content"
                android:text="@string/return_rate_dialog_present_value_text_view"/>
            <EditText
                android:layout_width="@dimen/rrdt_EditTexts_lwidth"
                android:layout_weight="@dimen/rrdt_edit_text_weight"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_c0"
                android:inputType="numberDecimal"
                android:id="@+id/return_rate_c0"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cf_checkbox"
                />
            <TextView
                android:layout_width="@dimen/rrdt_TextViews_lwidth"
                android:layout_weight="@dimen/rrdt_text_view_weight"
                android:layout_height="wrap_content"
                android:text="@string/return_rate_dialog_future_value_text_view"/>
            <EditText
                android:layout_width="@dimen/rrdt_EditTexts_lwidth"
                android:layout_weight="@dimen/rrdt_edit_text_weight"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_cf"
                android:inputType="numberDecimal"
                android:id="@+id/return_rate_cf"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_checkbox"
                />
            <TextView
                android:layout_width="@dimen/rrdt_TextViews_lwidth"
                android:layout_weight="@dimen/rrdt_text_view_weight"
                android:layout_height="wrap_content"
                android:text="@string/return_rate_dialog_t_span_text_view"/>
            <EditText
                android:layout_width="@dimen/rrdt_EditTexts_lwidth"
                android:layout_weight="@dimen/rrdt_edit_text_weight"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_t"
                android:inputType="numberDecimal"
                android:id="@+id/return_rate_t"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/r_checkbox"
                />
            <TextView
                android:layout_width="@dimen/rrdt_TextViews_lwidth"
                android:layout_weight="@dimen/rrdt_text_view_weight"
                android:layout_height="wrap_content"
                android:text="@string/return_rate_dialog_r_text_view"/>
            <EditText
                android:layout_width="@dimen/rrdt_EditTexts_lwidth"
                android:layout_weight="@dimen/rrdt_edit_text_weight"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_r"
                android:inputType="numberDecimal"
                android:id="@+id/return_rate_r"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>